--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "flexboxgrid",
-  "version": "6.3.2",
+  "name": "@a-ui/flexboxgrid",
+  "version": "1.0.0",
   "description": "Grid based off of CSS3 flexbox specification",
   "style": "dist/flexboxgrid.css",
   "main": "dist/flexboxgrid.css",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/kristoferjoseph/flexboxgrid.git"
+    "url": "git://github.com/a-ui/core_flexboxgrid_scss.git"
   },
   "keywords": [
     "browser",
@@ -20,9 +20,9 @@
   "author": "@dam",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/kristoferjoseph/flexboxgrid/issues"
+    "url": "https://github.com/a-ui/core_flexboxgrid_scss/issues"
   },
-  "homepage": "https://github.com/kristoferjoseph/flexboxgrid",
+  "homepage": "https://github.com/a-ui/core_flexboxgrid_scss",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.4",
