--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "style": "dist/flexboxgrid.css",
   "main": "dist/flexboxgrid.css",
   "scripts": {
+    "build": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
